@@ -10,7 +10,10 @@ Version 1.4.8 - CVS
   - Add manual page for conf.pl under contrib.
   - Don't allow selecting INBOX as Sent, Draft or Trash folder (#1242346).
   - Fixed spamcop web based reporting form (#1519673).
-  
+  - Session cookies are turned on, if session.use_cookies is turned off
+    in PHP configuration (#1518885).
+  - Cleaned whitespace in output buffer when plugins are loaded (#1291209).
+
 Version 1.4.7 - 4th July 2006
 -----------------------------
   - Security: Possible cookie theft in src/redirect.php if
